--- a/modulos/modulo 4/mod4.4_comparacoes_e_desvios/index.html
+++ b/modulos/modulo 4/mod4.4_comparacoes_e_desvios/index.html
@@ -1368,7 +1368,7 @@ O que existe é:</p>
 <li><code>x0</code> — registrador especial que <strong>sempre vale 0</strong> (zero “ligado por hardware”, <em>hard-wired zero</em>)</li>
 <li><code>t0</code>, <code>t1</code>, <code>t2</code>… — registradores temporários (<em>temporary registers</em>), usados para cálculos intermediários</li>
 </ul>
-<p>Também vamos usar algumas instruções de apoio (todas explicadas agora na <strong>primeira ocorrência</strong>):</p>
+<p>Também vamos usar algumas instruções de apoio:</p>
 <ul>
 <li>
 <p><code>li rd, imm</code> — <strong><code>li</code> (load immediate)</strong>: carrega um valor imediato (constante) <code>imm</code> diretamente para o registrador <code>rd</code>.
