deploy: a6427b619b9576aa2dd0962155be0567323e41d8

--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
   <span class="md-ellipsis">
     
   
-    4.1. Instruções de Imediato (`li`, `addi`)
+    4.1. Instruções de Imediato
   
 
     
