--- a/modulos/modulo 4/mod4.3_aritmetica_basica/index.html
+++ b/modulos/modulo 4/mod4.3_aritmetica_basica/index.html
@@ -569,7 +569,7 @@
   <span class="md-ellipsis">
     
   
-    4.1. Instruções de Imediato (`li`, `addi`)
+    4.1. Instruções de Imediato
   
 
     
