--- a/modulos/modulo 5/mod5/index.html
+++ b/modulos/modulo 5/mod5/index.html
@@ -564,7 +564,7 @@
   <span class="md-ellipsis">
     
   
-    4.1. Instruções de Imediato (`li`, `addi`)
+    4.1. Instruções de Imediato
   
 
     
